@@ -1,22 +1,31 @@
-import org.jetbrains.kotlin.gradle.plugin.*
-
 buildscript {
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.jetbrains.kotlinx:atomicfu-gradle-plugin:0.14.1")
+        classpath("org.jetbrains.kotlinx:atomicfu-gradle-plugin:0.18.3")
     }
 }
 
 plugins {
-    kotlin("jvm") version "1.3.61"
+    kotlin("jvm") version "1.9.10"
     java
 }
 
 apply(plugin = "kotlinx-atomicfu")
 
-group = "ru.ifmo.mpp"
+tasks {
+    test {
+        maxHeapSize = "4g"
+        jvmArgs(
+            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
+        )
+    }
+}
+
+group = "ru.itmo.mpp"
 version = "1.0-SNAPSHOT"
 
 repositories {
@@ -25,32 +34,21 @@ repositories {
 
 dependencies {
     implementation(kotlin("stdlib-jdk8"))
+    implementation(kotlin("reflect"))
     testImplementation(kotlin("test-junit"))
+    testImplementation("org.jetbrains.kotlinx:lincheck:2.23")
 }
 
-sourceSets {
-    main {
-        java.setSrcDirs(listOf("src"))
-        withConvention(KotlinSourceSet::class) {
-            kotlin.setSrcDirs(listOf("src"))
-        }
-    }
-    test {
-        withConvention(KotlinSourceSet::class) {
-            kotlin.setSrcDirs(listOf("test"))
-        }
-    }
-}
-
-tasks {
-    test {
-        testLogging.showExceptions = true
-        testLogging.showStandardStreams = true
-    }
-}
-
-// This is needed for the current version of AtomicFu that does not support Java 11 bytecode
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
+sourceSets.main {
+    java.srcDir("src")
+}
+
+sourceSets.test {
+    java.srcDir("test")
 }
